fixed legend wrap
TG-768

--- a/src/app/dashboard/activities/list-activities/chart-statistics/chart.component.sass
+++ b/src/app/dashboard/activities/list-activities/chart-statistics/chart.component.sass
@@ -1,5 +1,8 @@
 @import "../../../../../sass/variables"
 
+.chart-legend .legend-labels
+  white-space: normal !important
+
 .ps-chart-wrapper
   display: inline-block
   width: 100%
